// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SmsIntegrationPreferences/> render() should render 1`] = `
<div
  class="pageContainer container-fluid"
>
  <div
    class="row"
  >
    <div
      class="col-lg-6 col-xl-7"
    >
      <form
        class=""
      >
        <div
          class="row"
        >
          <div
            class="col"
          >
            <div
              class="form-group"
            >
              <label
                class="control-label"
                for="title"
              >
                Integration title
              </label>
              <div
                class="container"
              >
                <span
                  class="inputGroup wrapper group horizontal"
                >
                  <div
                    class="picker emojiPicker"
                  >
                    <span
                      class="material-icons empty icon"
                    >
                      insert_emoticon
                    </span>
                  </div>
                  <div
                    class="wrapper right isNested"
                  >
                    <input
                      class="input"
                      data-resizable="false"
                      id="title"
                      name="title"
                      placeholder="Ex: Company Support Line"
                      required=""
                      tabindex="0"
                      type="text"
                      value="My new SMS Integration"
                    />
                  </div>
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="mt-4 mb-5 row"
        >
          <div
            class="col"
          >
            <h4
              class="mb-3"
            >
              Phone number
            </h4>
            <div
              class="appRow ml-1 mr-1 row"
            >
              <div
                class="pl-0 col-lg-8"
              >
                <div
                  class="wrapper"
                >
                  <div
                    class="wrapper"
                  >
                    <span
                      role="img"
                      style="display: inline-block; font-size: 1em; line-height: 1em; vertical-align: middle;"
                    >
                      🇺🇸
                    </span>
                  </div>
                  <strong>
                    A Phone Number
                  </strong>
                   
                  <span />
                </div>
              </div>
              <div
                class="appLink col-lg-4"
              >
                <a
                  href="/app/settings/phone-numbers/1"
                >
                  Manage Phone Number
                </a>
              </div>
            </div>
          </div>
        </div>
        <div
          class="mt-5"
        >
          <button
            aria-disabled="false"
            class="ui-button-wrapper-a432 ui-button-md-a432 ui-button-primary-a432"
            data-name="button"
            data-rac=""
            data-react-aria-pressable="true"
            id="react-aria-:r0:"
            tabindex="0"
            type="submit"
          >
            <div
              class="ui-button-surface-a432"
            >
              <span
                class="ui-button-content-a432"
              >
                <span
                  class="typography-bold-md ui-text-text-d239"
                  data-name="text"
                  style="text-align: left; text-wrap: nowrap;"
                >
                  <strong>
                    Save changes
                  </strong>
                </span>
              </span>
            </div>
          </button>
          <button
            aria-disabled="false"
            class="ui-button-wrapper-cef1 float-right ui-button-fill-cef1 ui-button-destructive-cef1"
            id="delete-integration"
            type="button"
          >
            <i
              aria-hidden="true"
              class="material-icons ui-buttonicon-icon-e486 ui-buttonicon-medium-e486"
            >
              delete
            </i>
            <span
              class="ui-button-content-cef1"
            >
              Delete integration
            </span>
          </button>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`<SmsIntegrationPreferences/> render() should submit a valid payload with the selected phone_number_id 1`] = `
<div
  class="pageContainer container-fluid"
>
  <div
    class="row"
  >
    <div
      class="col-lg-6 col-xl-7"
    >
      <form
        class=""
      >
        <div
          class="row"
        >
          <div
            class="col"
          >
            <div
              class="form-group"
            >
              <label
                class="control-label"
                for="title"
              >
                Integration title
              </label>
              <div
                class="container"
              >
                <span
                  class="inputGroup wrapper group horizontal"
                >
                  <div
                    class="picker emojiPicker"
                  >
                    <span
                      class="material-icons empty icon"
                    >
                      insert_emoticon
                    </span>
                  </div>
                  <div
                    class="wrapper right isNested"
                  >
                    <input
                      class="input"
                      data-resizable="false"
                      id="title"
                      name="title"
                      placeholder="Ex: Company Support Line"
                      required=""
                      tabindex="0"
                      type="text"
                      value="My updated SMS integration"
                    />
                  </div>
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="mt-4 mb-5 row"
        >
          <div
            class="col"
          >
            <h4
              class="mb-3"
            >
              Phone number
            </h4>
            <div
              class="appRow ml-1 mr-1 row"
            >
              <div
                class="pl-0 col-lg-8"
              >
                <div
                  class="wrapper"
                >
                  <div
                    class="wrapper"
                  >
                    <span
                      role="img"
                      style="display: inline-block; font-size: 1em; line-height: 1em; vertical-align: middle;"
                    >
                      🇺🇸
                    </span>
                  </div>
                  <strong>
                    A Phone Number
                  </strong>
                   
                  <span />
                </div>
              </div>
              <div
                class="appLink col-lg-4"
              >
                <a
                  href="/app/settings/phone-numbers/1"
                >
                  Manage Phone Number
                </a>
              </div>
            </div>
          </div>
        </div>
        <div
          class="mt-5"
        >
          <button
            aria-disabled="true"
            class="ui-button-wrapper-a432 ui-button-md-a432 ui-button-primary-a432 ui-button-isloading-a432"
            data-disabled="true"
            data-name="button"
            data-pending="true"
            data-rac=""
            data-react-aria-pressable="true"
            disabled=""
            id="react-aria-:r2:"
            type="button"
          >
            <div
              class="ui-button-surface-a432"
            >
              <span
                class="ui-button-content-a432"
              >
                <span
                  class="typography-bold-md ui-text-text-d239"
                  data-name="text"
                  style="text-align: left; text-wrap: nowrap;"
                >
                  <strong>
                    Save changes
                  </strong>
                </span>
                <div
                  aria-busy="true"
                  aria-label="Loading..."
                  class="ui-buttonloader-loader-eacb ui-buttonloader-primary-eacb"
                  role="status"
                >
                  <div
                    class="ui-buttonloader-indicator-eacb"
                  />
                </div>
              </span>
            </div>
          </button>
          <button
            aria-disabled="false"
            class="ui-button-wrapper-cef1 float-right ui-button-fill-cef1 ui-button-destructive-cef1"
            id="delete-integration"
            type="button"
          >
            <i
              aria-hidden="true"
              class="material-icons ui-buttonicon-icon-e486 ui-buttonicon-medium-e486"
            >
              delete
            </i>
            <span
              class="ui-button-content-cef1"
            >
              Delete integration
            </span>
          </button>
        </div>
      </form>
    </div>
  </div>
</div>
`;
